[package]
name = "tor_py_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "tor_py_client"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.4"
pyo3 = { version = "0.18", features = ["extension-module"] }

tokio = { version = "1.0", features = ["full"] }
time = "0.3"
futures = "0.3"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
async-stream = "0.3"
postage = "0.5"
hex = "0.4"
base64 = "0.13"

# tor-proto = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
# tor-config = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
# tor-chanmgr = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
# tor-linkspec = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
# tor-memquota = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
# tor-basic-utils = { git = "https://gitlab.torproject.org/tpo/core/arti.git" }
tor-units = { path = "./arti/crates/tor-units" }
tor-config = { path = "./arti/crates/tor-config" }
tor-dirmgr = { path = "./arti/crates/tor-dirmgr" }
tor-netdir = { path = "./arti/crates/tor-netdir" }
tor-proto = { path = "./arti/crates/tor-proto" }
tor-chanmgr = { path = "./arti/crates/tor-chanmgr" }
tor-linkspec = { path = "./arti/crates/tor-linkspec" }
tor-llcrypto = { path = "./arti/crates/tor-llcrypto" }
tor-memquota = { path = "./arti/crates/tor-memquota" }
tor-basic-utils = { path = "./arti/crates/tor-basic-utils" }
# arti-client = { path = "./arti/crates/arti-client" }

[dependencies.tor-rtcompat]
# git = "https://gitlab.torproject.org/tpo/core/arti.git"
path = "./arti/crates/tor-rtcompat"
features = ["rustls", "tokio"]